# machine-tester

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  alltoall.cpp  alltoall.h  alltoallv.cpp  alltoallv.h  bandwidth.cpp  bandwidth.h  cpu.cpp  cpu.h  gemm.cpp  gemm.h  latency.cpp  latency.h  main.cpp  memory_latency.cpp  plot.py  shell.nix  stats.cpp  stats.h
examples/: common.sh
examples/impi-oneapi/: build.sh  run.sh
examples/mvapich2-spack/: build.sh  run.sh
examples/ompi-spack/: build.sh  run.sh
examples/ompi-spack-slurm/: build.sh  run.sh
examples/ompi-system/: build.sh  run.sh
